--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -73,6 +73,8 @@
   <script>
 
     const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
     const setDate = () => {
       const now = new Date();
       const seconds = now.getSeconds();
@@ -80,8 +82,12 @@
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
       const mins = now.getMinutes();
-      const minsDegrees = (mins * 360) + 90;
+      const minsDegrees = ((mins / 60) * 360) + 90;
       minHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hours = now.getMinutes();
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
     }
 
     setInterval(setDate, 1000);
